dashboard改造完成，能编译了，还未测试