@@ -1,10 +1,12 @@
 package com.txwx.social.crm.bizchain.product.handler.query;
 
+import com.alibaba.nacos.shaded.com.google.gson.Gson;
 import com.ruoyi.common.core.constant.HttpStatus;
 import com.ruoyi.common.core.utils.PageUtils;
 import com.github.pagehelper.Page;
 import com.ruoyi.common.core.utils.bean.BeanUtils;
 import com.ruoyi.common.core.web.page.TableDataInfo;
+import com.txwx.social.api.domain.dto.ProductDTO;
 import com.txwx.social.api.domain.dto.SimpleProductDTO;
 import com.txwx.social.crm.bizchain.product.context.ProductChainContext;
 import com.txwx.social.crm.common.chain.AbstractChainHandler;
@@ -29,8 +31,24 @@ public class ProductBaseQueryHandler extends AbstractChainHandler<ProductChainCo
         if (!context.getQueryConfig().isQueryProduct()) {
             context.skipCurrentHandler("请求跳过查询产品基本信息");
         }
+
+        List<Long> productIds = context.getProductIds();
+
+        if (CollectionUtils.isEmpty(productIds)) {
+            TableDataInfo dataInfo = new TableDataInfo();
+            dataInfo.setCode(HttpStatus.SUCCESS);
+            dataInfo.setMsg("查询成功");
+            dataInfo.setRows(Lists.newArrayList()); // 当前页数据
+            dataInfo.setTotal(0);
+            context.setPageResult(dataInfo);
+            context.setProductList(Lists.newArrayList());
+            return;
+        }
+
         PageUtils.startPage(context.getPageDomain());
-        List<TxwxProductPO> productList = productMapper.selectProductList(EntityConvertor.convert2PO(context.getQueryParams(), false));
+        List<TxwxProductPO> productList = productMapper.selectProductList(
+                EntityConvertor.convert2PO(context.getQueryParams(),
+                        context.getProductIds(), false));
         // 3. 获取 Page 对象（关键！）
         Page<TxwxProductPO> page = (Page<TxwxProductPO>) productList;
 
@@ -48,10 +66,18 @@ public class ProductBaseQueryHandler extends AbstractChainHandler<ProductChainCo
                         BeanUtils.copyProperties(po, dto);
                         return dto;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         }
-        context.setProductList(simpleProductDTOList);
+        List<ProductDTO> productDTOList = Lists.newArrayList();
+        simpleProductDTOList.forEach(simple -> {
+            ProductDTO productDTO = new ProductDTO();
+            productDTO.setBaseInfo(simple);
+            productDTOList.add(productDTO);
+        });
+        context.setProductList(productDTOList);
         context.setPageResult(dataInfo);
+        List<Long> queryPids = simpleProductDTOList.stream().map(SimpleProductDTO::getId).toList();
+        context.setProductIds(queryPids);
     }
 
 
